--- a/smartDownloader/build.gradle
+++ b/smartDownloader/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    testImplementation 'org.robolectric:robolectric:4.0.2'
+    testCompile "com.google.truth:truth:0.42"
 }
