Added image load callback.

--- a/smartDownloader/build.gradle
+++ b/smartDownloader/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 28
-        versionCode 3
-        versionName "0.3"
+        versionCode 4
+        versionName "0.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -33,5 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     testImplementation 'org.robolectric:robolectric:4.0.2'
-    testCompile "com.google.truth:truth:0.42"
+    testImplementation "com.google.truth:truth:0.42"
 }
